--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,11 @@
   <div class="titulo">Teste de Voz</div>
 
   <div>
-    <textarea rows="20">{{message}}</textarea>
+    <textarea rows="3">{{message}}</textarea>
+  </div>
+
+  <div>
+    <textarea rows="3">{{medicalComplaint}}</textarea>
   </div>
 
   <div>
