--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,35 +1,10 @@
-textarea {
-  width: 60vw;
-  height: 50vh;
-  margin: 40px auto 20px auto;
-  display: block;
-  resize: none;
-  padding: 10px;
-  font-size: 16px;
-}
-
-.titulo {
-  font-size: 24px;
-  font-weight: bold;
-  margin-top: 20px;
-  text-align: center;
-  color: aliceblue;
-}
-
-div:last-child {
-  display: flex;
-  justify-content: center;
-  gap: 10px;
-}
-
 button {
   margin-right: 10px;
   padding: 10px 20px;
-  font-size: 16px;
+  font-size: 20px;
   width: 220px;
   cursor: pointer;
   border: none;
-  background-color: #007bff;
   color: white;
   border-radius: 5px;
   transition: background-color 0.3s ease;
@@ -37,4 +12,53 @@ button {
 
 button:hover {
   background-color: #0056b3;
+}
+
+
+label {
+  color: white;
+  font-size: 20px;
+}
+
+.centralizar-spinner {
+  position: fixed;
+  width: 10vw;
+  height: 10vh;
+  top: 50vh;
+  left: 50vw;
+  z-index: 1900;
+  .loader-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  display: inline-block;
+  position: relative;
+  border-width: 5px 5px 5px 5px;
+  border-style: solid dotted solid dotted;
+  border-color: #de3500 rgba(255, 255, 255,0.3) #06641d rgba(151, 107, 93, 0.3);
+  border-radius: 50%;
+  box-sizing: border-box;
+  animation: 1s rotate linear infinite;
+}
+.loader:before , .loader:after{
+  content: '';
+  top: 0;
+  left: 0;
+  position: absolute;
+  border: 10px solid transparent;
+  border-bottom-color:#06641d;
+  transform: translate(-10px, 19px) rotate(-35deg);
+}
+.loader:after {
+  border-color: #de3500 #0000 #0000 #0000 ;
+  transform: translate(32px, 3px) rotate(-35deg);
+}
+ @keyframes rotate {
+  100%{    transform: rotate(360deg)}
 }
