--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,5 @@
 body {
-    margin: 0;
-    height: 100vh;
-    font-family: Arial, sans-serif;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: rgb(58, 56, 56);
+    background-color: rgb(87, 83, 83);
+    margin-left: 20%;
+    margin-right: 20%;
 }
