--- a/src/app/component-audio-wav/component-audio-wav.component.html
+++ b/src/app/component-audio-wav/component-audio-wav.component.html
@@ -1,5 +1,9 @@
 <div class="col-12 md:col-12">
 
+  <div class="col-12 md:col-12">
+    <h3>Teste capturando o aúdio completo e enviando para o backend</h3>
+  </div>
+
   <form #formulario="ngForm" autocomplete="off">
 
     <p-fluid>
